# vrsoft

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
src/backend/: __init__.py  api.py  config.py  dlq.py  entrada.py  model.py  retries.py  validacao.py
tests/: test_entrada_callback.py
