[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "cmelo",email = "cmelo.marcelo.pereira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "aio-pika (>=9.5.7,<10.0.0)",
    "uuid (>=1.30,<2.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "backend:main"
entrada = "backend.entrada:main"